fix removing vertical scrollbar

--- a/style.css
+++ b/style.css
@@ -1,26 +1,30 @@
 #translate_btn{
-    padding: 2rem;
+    padding: 1rem;
     font-size: 2rem;
-    margin-left: 2rem;
+    background-color: purple;
+    color: white;
 
 }
 
 main{
-    max-width:  800px;
+    max-width:  600px;
     font-family: sans-serif;
     margin: auto;
+    padding: 1rem;
 }
 textarea{
-    width: 100%;
+    width: 80%;
     border: 1px solid black;
-    height: 4rem;
+    min-height: 15vh;
     font-size: 1.2rem;
     padding: 1rem;
-    margin: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
 }
 
 .header{
-    padding: 1rem;
+    padding-top: 1rem;
 text-align: center;
 top: 0;
 height: 3rem;
@@ -34,11 +38,12 @@ font-weight: 600;
 
 footer{
     position: fixed;
-    bottom: 0;
-    height: 6rem;
+    height: 4rem;
     background-color: purple;
     color: white;
     width: 100%;
+    bottom: 0;
+    padding: 0;
 }
 body{
     margin: 0;
